# haskell-learning

./: .gitignore  WC.hs  quux.txt
ch01/: quux.txt
ch02/: Take.hs  lastButOne.hs  myDrop.hs
ch03/: AlgebraciVector.hs  BadIndent.hs  BadTree.hs  BogusPattern.hs  BookStore.hs  Brace.hs  Direction.hs  GoodIndent.hs  Guard.hs  Indentation.hs  Intersperse.hs  Lending.hs  ListADT.hs  LocalFunction.hs  MyListLength.hs  MyMean.hs  MySecond.hs  NestedLets.hs  Nullable.hs  Palindrome.hs  Roygbiv.hs  Tree.hs  add.hs  exercises.hs  letwhere.hs
ch04/: Adler32.hs  FixLines.hs  Fold.hs  IntParse.hs  InteractWith.hs  Lambda.hs  Map.hs  Partial.hs  Plus.hs  PrintFirstWord.hs  SplitLines.hs  SuffixTree.hs  Sum.hs  dlts.hs  exercises.hs  hello-in.txt
ch05/: Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hs  SimpleResult.hs  Trouble.hs  mypretty.cabal
ch06/: AutomaticDerivation.hs  BrokenClass.hs  JSONClass.hs  JSONClassExport.hs  Monomporphism.hs  Newtype.hs  NewtypeDiff.hs  SimpleClass.hs  eqqclasse.hs  naiveeq.hs  read.hs
ch07/: actions.hs  basicio-nodo.hs  callingpure.hs  return2.hs  tempfile.hs  toupper-imp.hs  toupper-lazy1.hs  toupper-lazy2.hs  toupper-lazy3.hs  toupper-lazy6.hs
ch08/: ElfMagic.hs  Glob.hs  GlobRegex.hs  GlobRegexEither.hs  HighestClose.hs  Useful.hs  append.hs
ch09/: BetterPredicate.hs  ControlledVisit.hs  FoldDir.hs  RecursiveContents.hs  SimpleFinder.hs  Style.hs
ch10/: EitherIntFlexible.hs  Parse.hs  TreeMap.hs  TypeConstraint.hs  ValidFunctor.hs
ch11/: Arbitrary.hs  Arbitrary2.hs  Prettify2.hs  QC-basics.hs  QC.hs  Run.hs  (+1 more)
(+132 files in other folders)
